AX-1576 api fireeye improvements. (#1428)
* Added linting to api.
Added pagingation metadata on api calls.
Added documentation.

* Fixed gui testing.

* Fixed CR Comments.

* autopep.
