# plugins/gui/api.py
@@ -1,12 +1,15 @@
-from flask import jsonify, request
-from axonius.utils import gui_helpers
-from axonius.plugin_base import EntityType, return_error
 import logging
+import math
+
+from flask import jsonify, request
 from passlib.hash import bcrypt
+
+from axonius.plugin_base import EntityType, return_error
+from axonius.utils import gui_helpers
 
 logger = logging.getLogger(f"axonius.{__name__}")
 
-api_version = '1'
+API_VERSION = "1"
 
 
 # Caution! These decorators must come BEFORE @add_rule
@@ -20,12 +23,12 @@ def basic_authentication(func):
             """This function is called to check if a username /
             password combination is valid.
             """
-            users_collection = self._get_collection('users')
-            user_from_db = users_collection.find_one({'user_name': username})
+            users_collection = self._get_collection("users")
+            user_from_db = users_collection.find_one({"user_name": username})
             if user_from_db is None:
                 logger.info(f"Unknown user {username} tried logging in")
                 return False
-            return bcrypt.verify(password, user_from_db['password'])
+            return bcrypt.verify(password, user_from_db["password"])
 
         auth = request.authorization
         if not auth or not check_auth(auth.username, auth.password):
@@ -35,34 +38,49 @@ def basic_authentication(func):
     return wrapper
 
 
+def get_page_metadata(skip, limit, number_of_assets):
+    logger.info(f"skip this:{skip}")
+    logger.info(f"limit this:{limit}")
+    return {
+        "number": math.floor((skip / limit) + 1) if limit != 0 else 0,  # Current page number
+        "size": min(max(number_of_assets - skip, 0), limit),  # Number of assets in current page
+        "totalPages": math.ceil(number_of_assets / limit) if limit != 0 else 0,  # Total number of pages
+        "totalResources": number_of_assets  # Total number of assets filtered
+    }
+
+
 class API:
 
     ###########
     # DEVICES #
     ###########
-    @gui_helpers.add_rule_unauthenticated(f'api', methods=['GET'],
+    @gui_helpers.add_rule_unauthenticated(f"api", methods=["GET"],
                                           auth_method=None)
     def api_description(self):
-        return api_version
+        return API_VERSION
 
     @gui_helpers.paginated()
     @gui_helpers.filtered()
     @gui_helpers.sorted_endpoint()
     @gui_helpers.projected()
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/devices', methods=['GET'], auth_method=basic_authentication)
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/devices", methods=["GET"], auth_method=basic_authentication)
     def api_devices(self, limit, skip, mongo_filter, mongo_sort, mongo_projection):
-        return jsonify(
-            gui_helpers.get_entities(limit, skip, mongo_filter, mongo_sort, mongo_projection,
-                                     self.gui_dbs.entity_query_views_db_map[EntityType.Devices],
-                                     self._entity_views_db_map[EntityType.Devices], EntityType.Devices, True,
-                                     default_sort=self._system_settings['defaultSort']))
+        return_doc = {
+            "page": get_page_metadata(skip, limit, int(self._get_entities_count(mongo_filter, EntityType.Devices))),
+            "assets": gui_helpers.get_entities(limit, skip, mongo_filter, mongo_sort, mongo_projection,
+                                               self.gui_dbs.entity_query_views_db_map[EntityType.Devices],
+                                               self._entity_views_db_map[EntityType.Devices], EntityType.Devices, True,
+                                               default_sort=self._system_settings["defaultSort"])
+        }
 
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/devices/<device_id>', methods=['GET'],
+        return jsonify(return_doc)
+
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/devices/<device_id>", methods=["GET"],
                                           auth_method=basic_authentication)
     def api_device_by_id(self, device_id):
-        return self._entity_by_id(EntityType.Devices, device_id, ['installed_software', 'security_patches',
-                                                                  'available_security_patches', 'users',
-                                                                  'connected_hardware', 'local_admins'])
+        return self._entity_by_id(EntityType.Devices, device_id, ["installed_software", "security_patches",
+                                                                  "available_security_patches", "users",
+                                                                  "connected_hardware", "local_admins"])
 
     #########
     # USERS #
@@ -72,18 +90,22 @@ class API:
     @gui_helpers.filtered()
     @gui_helpers.sorted_endpoint()
     @gui_helpers.projected()
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/users', auth_method=basic_authentication)
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/users", auth_method=basic_authentication)
     def api_users(self, limit, skip, mongo_filter, mongo_sort, mongo_projection):
-        return jsonify(
-            gui_helpers.get_entities(limit, skip, mongo_filter, mongo_sort, mongo_projection,
-                                     self.gui_dbs.entity_query_views_db_map[EntityType.Users],
-                                     self._entity_views_db_map[EntityType.Users], EntityType.Users, True,
-                                     default_sort=self._system_settings['defaultSort']))
+        return_doc = {
+            "page": get_page_metadata(skip, limit, int(self._get_entities_count(mongo_filter, EntityType.Users))),
+            "assets": gui_helpers.get_entities(limit, skip, mongo_filter, mongo_sort, mongo_projection,
+                                               self.gui_dbs.entity_query_views_db_map[EntityType.Users],
+                                               self._entity_views_db_map[EntityType.Users], EntityType.Users, True,
+                                               default_sort=self._system_settings["defaultSort"])
+        }
 
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/users/<user_id>', methods=['GET'],
+        return jsonify(return_doc)
+
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/users/<user_id>", methods=["GET"],
                                           auth_method=basic_authentication)
     def api_user_by_id(self, user_id):
-        return self._entity_by_id(EntityType.Users, user_id, ['associated_devices'])
+        return self._entity_by_id(EntityType.Users, user_id, ["associated_devices"])
 
     ##########
     # ALERTS #
@@ -93,13 +115,18 @@ class API:
     @gui_helpers.filtered()
     @gui_helpers.sorted_endpoint()
     @gui_helpers.projected()
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/alerts', methods=['GET', 'PUT', 'DELETE'],
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/alerts", methods=["GET", "PUT", "DELETE"],
                                           auth_method=basic_authentication)
     def api_alerts(self, limit, skip, mongo_filter, mongo_sort, mongo_projection):
-        if request.method == 'GET':
-            return jsonify(self.get_alerts(limit, mongo_filter, mongo_projection, mongo_sort, skip))
+        if request.method == "GET":
+            alerts = self.get_alerts(limit, mongo_filter, mongo_projection, mongo_sort, skip)
+            return_doc = {
+                "page": get_page_metadata(skip, limit, len(alerts)),
+                "assets": alerts
+            }
+            return jsonify(return_doc)
 
-        if request.method == 'PUT':
+        if request.method == "PUT":
             report_to_add = request.get_json(silent=True)
             return self.put_alert(report_to_add)
 
@@ -109,34 +136,49 @@ class API:
     ###########
     # QUERIES #
     ###########
+    def query_views(self, limit, skip, mongo_filter, entity_type):
+        # Assuming only flask endpoints call this function.
+        views = self._entity_views(request.method, entity_type, limit, skip, mongo_filter)
+
+        if request.method == "GET":
+
+            return_doc = {
+                "page": self.calc_page(skip, limit, views),
+                "assets": views
+            }
+        else:
+            return_doc = views
+
+        return jsonify(return_doc)
 
     @gui_helpers.paginated()
     @gui_helpers.filtered()
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/devices/views', methods=['GET', 'POST', 'DELETE'],
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/devices/views", methods=["GET", "POST", "DELETE"],
                                           auth_method=basic_authentication)
     def api_device_views(self, limit, skip, mongo_filter):
         """
         Save or fetch views over the devices db
         :return:
         """
-        return self._entity_views(request.method, EntityType.Devices, limit, skip, mongo_filter)
+        return self.query_views(limit, skip, mongo_filter, EntityType.Devices)
 
     @gui_helpers.paginated()
     @gui_helpers.filtered()
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/users/views', methods=['GET', 'POST', 'DELETE'],
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/users/views", methods=["GET", "POST", "DELETE"],
                                           auth_method=basic_authentication)
-    def api_device_views(self, limit, skip, mongo_filter):
+    def api_users_views(self, limit, skip, mongo_filter):
         """
-        Save or fetch views over the devices db
+        Save or fetch views over the users db
         :return:
         """
-        return self._entity_views(request.method, EntityType.Users, limit, skip, mongo_filter)
+        return self.query_views(limit, skip, mongo_filter, EntityType.Users)
 
-        ###########
-        # QUERIES #
-        ###########
+    ###########
+    # ACTIONS #
+    ###########
 
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/actions/<action_type>', methods=['POST'], auth_method=basic_authentication)
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/actions/<action_type>", methods=["POST"],
+                                          auth_method=basic_authentication)
     def api_run_actions(self, action_type):
         """
         Executes a run shell command on devices.
@@ -144,15 +186,15 @@ class API:
         :return:
         """
         action_data = self.get_request_data_as_object()
-        action_data['action_type'] = action_type
+        action_data["action_type"] = action_type
         return self.run_actions(action_type)
 
-    @gui_helpers.add_rule_unauthenticated(f'V{api_version}/actions', methods=['GET'], auth_method=basic_authentication)
+    @gui_helpers.add_rule_unauthenticated(f"V{API_VERSION}/actions", methods=["GET"], auth_method=basic_authentication)
     def api_get_actions(self):
         """
         Executes a run shell command on devices.
         Expected values: a list of internal axon ids, the action name, and the action command.
         :return:
         """
-        actions = ['deploy', 'shell']
+        actions = ["deploy", "shell"]
         return jsonify(actions)
